--- a/spa-root/package.json
+++ b/spa-root/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@spa-root/root-config",
   "scripts": {
-    "start": "webpack serve --port 9000 --env isLocal",
+    "start": "node ../tokens/build.js && webpack serve --port 9000 --env isLocal",
     "lint": "eslint src --ext js",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "format": "prettier --write .",
@@ -29,6 +29,7 @@
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "serve": "^12.0.0",
+    "style-dictionary": "^3.8.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.8.0",
     "webpack-config-single-spa": "^5.0.0",
