--- a/stencil-library/package.json
+++ b/stencil-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stencil-library-web",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
@@ -26,7 +26,8 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^4.0.0"
+    "@stencil/core": "^4.0.0",
+    "@stencil/sass": "^3.0.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
