--- a/stencil-library/package.json
+++ b/stencil-library/package.json
@@ -30,6 +30,7 @@
     "@stencil/sass": "^3.0.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "jest": "^27.5.1",
