--- a/server-express/package.json
+++ b/server-express/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./build.js && node ./index.js  ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./build.js && node ./index.js  "
   },
   "keywords": [],
   "author": "",
