--- a/stencil-library/package.json
+++ b/stencil-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stencil-library-web",
-  "version": "0.0.31",
+  "version": "0.0.43",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
@@ -23,7 +23,9 @@
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@stencil/core": "^4.0.0",
@@ -31,11 +33,21 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@storybook/addon-essentials": "^7.5.2",
+    "@storybook/addon-interactions": "^7.5.2",
+    "@storybook/addon-links": "^7.5.2",
+    "@storybook/blocks": "^7.5.2",
+    "@storybook/html": "^7.5.2",
+    "@storybook/html-vite": "^7.5.2",
+    "@storybook/testing-library": "^0.2.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
-    "puppeteer": "^20.7.3"
+    "puppeteer": "^20.7.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.5.2"
   },
   "license": "MIT"
 }
